# sportshub-scraper

./: Cargo.toml
src/: lib.rs  scrape.rs
src/db/: models.rs
